@@ -2,7 +2,7 @@
 
 (c) Copyright 2009 {Sidu Ponnappa}[http://blog.sidu.in]. All Rights Reserved.
 
-Wrest is a ruby REST client library which allows you to quickly build object oriented wrappers around any web service. It has two components - Wrest Core and Wrest::Resource. The Wrest codebase is spec driven, strongly favours immutable objects and avoids globals/class methods/static methods making it better suited for use as a library, especially in multi-threaded environments. Wrest runs on Ruby 1.8, 1.9 and JRuby.
+Wrest is a ruby REST client library which allows you to quickly build object oriented wrappers around any web service. It has two components - Wrest Core and Wrest::Resource. The Wrest codebase is spec driven, strongly favours immutable objects and avoids class methods and setters making it better suited for use as a library, especially in multi-threaded environments. Wrest runs on Ruby 1.8, 1.9 and JRuby.
 
 To receive notifications whenever new features are added to Wrest, subscribe to my {twitter feed}[http://twitter.com/ponnappa].
 
