@@ -18,7 +18,7 @@ else
   require 'rake'
   require 'spec'
   require 'spec/rake/spectask'
-  
+
   begin
     require 'metric_fu'
   rescue LoadError
@@ -80,8 +80,8 @@ begin
     gemspec.rubyforge_project = 'wrest'
     gemspec.executables = ['wrest', 'jwrest']
     gemspec.require_path = "lib"
-    gemspec.files.exclude 'spec/unit/wrest/meh_spec.rb'
-    gemspec.test_files.exclude 'spec/unit/wrest/meh_spec.rb'
+    gemspec.files.exclude ['spec/unit/wrest/meh_spec.rb', 'spec/functional/sample_rails_app/db/*.sqlite3']
+    gemspec.test_files.exclude ['spec/unit/wrest/meh_spec.rb', 'spec/functional/sample_rails_app/config/*.sqlite3']
     gemspec.add_dependency('activesupport', '>= 2.3.2')
     case RUBY_PLATFORM
     when /java/
@@ -128,132 +128,338 @@ namespace (:benchmark) do
   desc "Create classes to be used in Wrest::Resource vs. ActiveResource"
   task :setup_test_classes do
     require 'active_resource'
-    require 'wrest'
+    require 'lib/wrest'
 
-    class Ooga < Wrest::Mappers::Resource::Base;end
-      class Booga < ActiveResource::Base; self.site='';end
+    class Ooga < Wrest::Resource::Base
+    end
+    class Booga < ActiveResource::Base 
+      self.site=''
+    end
+  end
+
+  desc "Benchmark when objects are created each time before getting data; i.e there are few queries per instantiation"
+  task :create_and_get => :setup_test_classes do |t|
+
+    n = 10000
+    puts "Running #{n} times per report"
+    Benchmark.bmbm(10) do |rpt|
+      rpt.report("Wrest::Resource") do
+        n.times {
+          ooga = Ooga.new(:id => 5, :profession => 'Natural Magician', :enhanced_by => 'Kai Wren')
+          ooga.profession
+          ooga.profession?
+          ooga.enhanced_by
+          ooga.enhanced_by?
+        }
       end
 
-      desc "Benchmark when objects are created each time before getting data; i.e there are few queries per instantiation"
-      task :create_and_get => :setup_test_classes do |t|
-
-        n = 10000
-        puts "Running #{n} times per report"
-        Benchmark.bmbm(10) do |rpt|
-          rpt.report("Wrest::Resource") do
-            n.times {
-              ooga = Ooga.new(:id => 5, :profession => 'Natural Magician', :enhanced_by => 'Kai Wren')
-              ooga.profession
-              ooga.profession?
-              ooga.enhanced_by
-              ooga.enhanced_by?
-            }
-          end
-
-          rpt.report("ActiveResource") do
-            n.times {
-              booga = Booga.new(:id => 5, :profession => 'Natural Magician', :enhanced_by => 'Kai Wren')
-              booga.profession
-              booga.profession?
-              booga.enhanced_by
-              booga.enhanced_by?
-            }
-          end
-        end
-      end
-
-      desc "Benchmark when objects are created beforehand; i.e there are many queries per instantiation"
-      task :create_once_and_get => :setup_test_classes do |t|
-
-        n = 10000
-        puts "Running #{n} times per report"
-
-        Benchmark.bmbm(10) do |rpt|
-          rpt.report("Wrest::Resource") do
-            ooga = Ooga.new(:id => 5, :profession => 'Natural Magician', :enhanced_by => 'Kai Wren')
-
-            n.times {
-              ooga.profession
-              ooga.profession?
-              ooga.enhanced_by
-              ooga.enhanced_by?
-            }
-          end
-
-          rpt.report("ActiveResource") do
-            booga = Booga.new(:id => 5, :profession => 'Natural Magician', :enhanced_by => 'Kai Wren')
-
-            n.times {
-              booga.profession
-              booga.profession?
-              booga.enhanced_by
-              booga.enhanced_by?
-            }
-          end
-        end
-      end
-
-      desc "Benchmark objects respond_to? performance without invocation"
-      task :responds_to_before => :setup_test_classes do |t|
-
-        n = 10000
-        puts "Running #{n} times per report"
-
-        Benchmark.bmbm(10) do |rpt|
-          rpt.report("Wrest::Resource") do
-            ooga = Ooga.new(:id => 5, :profession => 'Natural Magician', :enhanced_by => 'Kai Wren')
-
-            n.times {
-              ooga.respond_to?(:profession)
-              ooga.respond_to?(:profession?)
-              ooga.respond_to?(:profession=)
-            }
-          end
-
-          rpt.report("ActiveResource") do
-            booga = Booga.new(:id => 5, :profession => 'Natural Magician', :enhanced_by => 'Kai Wren')
-
-            n.times {
-              booga.respond_to?(:profession)
-              booga.respond_to?(:profession?)
-              booga.respond_to?(:profession=)
-            }
-          end
-        end
-      end
-
-      desc "Benchmark objects respond_to? performance after invocation"
-      task :responds_to_after => :setup_test_classes do |t|
-
-        n = 10000
-        puts "Running #{n} times per report"
-
-        Benchmark.bmbm(10) do |rpt|
-          rpt.report("Wrest::Resource") do
-            ooga = Ooga.new(:id => 5, :profession => 'Natural Magician', :enhanced_by => 'Kai Wren')
-            ooga.profession
-            ooga.profession?
-            ooga.profession = ''
-
-            n.times {
-              ooga.respond_to?(:profession)
-              ooga.respond_to?(:profession?)
-              ooga.respond_to?(:profession=)
-            }
-          end
-
-          rpt.report("ActiveResource") do
-            booga = Booga.new(:id => 5, :profession => 'Natural Magician', :enhanced_by => 'Kai Wren')
-            booga.profession
-            booga.profession?
-            booga.profession = ''
-
-            n.times {
-              booga.respond_to?(:profession)
-              booga.respond_to?(:profession?)
-              booga.respond_to?(:profession=)
-            }
-          end
-        end
+      rpt.report("ActiveResource") do
+        n.times {
+          booga = Booga.new(:id => 5, :profession => 'Natural Magician', :enhanced_by => 'Kai Wren')
+          booga.profession
+          booga.profession?
+          booga.enhanced_by
+          booga.enhanced_by?
+        }
       end
     end
+  end
+
+  desc "Benchmark when objects are created beforehand; i.e there are many queries per instantiation"
+  task :create_once_and_get => :setup_test_classes do |t|
+
+    n = 10000
+    puts "Running #{n} times per report"
+
+    Benchmark.bmbm(10) do |rpt|
+      rpt.report("Wrest::Resource") do
+        ooga = Ooga.new(:id => 5, :profession => 'Natural Magician', :enhanced_by => 'Kai Wren')
+
+        n.times {
+          ooga.profession
+          ooga.profession?
+          ooga.enhanced_by
+          ooga.enhanced_by?
+        }
+      end
+
+      rpt.report("ActiveResource") do
+        booga = Booga.new(:id => 5, :profession => 'Natural Magician', :enhanced_by => 'Kai Wren')
+
+        n.times {
+          booga.profession
+          booga.profession?
+          booga.enhanced_by
+          booga.enhanced_by?
+        }
+      end
+    end
+  end
+
+  desc "Benchmark objects respond_to? performance without invocation"
+  task :responds_to_before => :setup_test_classes do |t|
+
+    n = 10000
+    puts "Running #{n} times per report"
+
+    Benchmark.bmbm(10) do |rpt|
+      rpt.report("Wrest::Resource") do
+        ooga = Ooga.new(:id => 5, :profession => 'Natural Magician', :enhanced_by => 'Kai Wren')
+
+        n.times {
+          ooga.respond_to?(:profession)
+          ooga.respond_to?(:profession?)
+          ooga.respond_to?(:profession=)
+        }
+      end
+
+      rpt.report("ActiveResource") do
+        booga = Booga.new(:id => 5, :profession => 'Natural Magician', :enhanced_by => 'Kai Wren')
+
+        n.times {
+          booga.respond_to?(:profession)
+          booga.respond_to?(:profession?)
+          booga.respond_to?(:profession=)
+        }
+      end
+    end
+  end
+
+  desc "Benchmark objects respond_to? performance after invocation"
+  task :responds_to_after => :setup_test_classes do |t|
+
+    n = 10000
+    puts "Running #{n} times per report"
+
+    Benchmark.bmbm(10) do |rpt|
+      rpt.report("Wrest::Resource") do
+        ooga = Ooga.new(:id => 5, :profession => 'Natural Magician', :enhanced_by => 'Kai Wren')
+        ooga.profession
+        ooga.profession?
+        ooga.profession = ''
+
+        n.times {
+          ooga.respond_to?(:profession)
+          ooga.respond_to?(:profession?)
+          ooga.respond_to?(:profession=)
+        }
+      end
+
+      rpt.report("ActiveResource") do
+        booga = Booga.new(:id => 5, :profession => 'Natural Magician', :enhanced_by => 'Kai Wren')
+        booga.profession
+        booga.profession?
+        booga.profession = ''
+
+        n.times {
+          booga.respond_to?(:profession)
+          booga.respond_to?(:profession?)
+          booga.respond_to?(:profession=)
+        }
+      end
+    end
+  end  
+
+  desc "Benchmark xml deserialisation"
+  task :deserialise_xml => :setup_test_classes do |t|
+    n = 100
+    puts "Running #{n} times per report"
+    puts "Deserialising using #{ActiveSupport::XmlMini.backend}"
+    
+    Benchmark.bmbm(10) do |rpt|
+      rpt.report("hash.from_xml") do
+        n.times {
+          Hash.from_xml(serialised_data)
+        }
+      end
+    end
+  end
+    
+  def serialised_data
+      <<-EOXML
+<?xml version="1.0" encoding="UTF-8"?>
+    <business-units type="array">
+      <business-unit>
+        <company>OogaInc</company>
+        <created-at type="datetime">2008-08-27T16:21:33Z</created-at>
+        <department>FooMeh</department>
+        <id type="integer">1</id>
+        <client-number>0001</client-number>
+        <updated-at type="datetime">2008-08-27T16:21:33Z</updated-at>
+        <accounts type="array">
+          <account>
+            <account-number>1</account-number>
+            <created-at type="datetime">2008-08-27T16:21:33Z</created-at>
+            <id type="integer">1</id>
+            <client-id type="integer">1</client-id>
+            <updated-at type="datetime">2008-08-27T16:21:33Z</updated-at>
+            <client-number>0001</client-number>
+          </account>
+        </accounts>
+      </business-unit>
+      <business-unit>
+        <company>OogaInc</company>
+        <created-at type="datetime">2008-08-27T18:35:22Z</created-at>
+        <department>BoogaBooga</department>
+        <id type="integer">32479</id>
+        <client-number>0002</client-number>
+        <updated-at type="datetime">2008-08-27T18:35:37Z</updated-at>
+        <accounts type="array">
+          <account>
+            <account-number>0</account-number>
+            <created-at type="datetime">2008-08-27T18:36:07Z</created-at>
+            <id type="integer">32479</id>
+            <client-id type="integer">32479</client-id>
+            <updated-at type="datetime">2008-08-27T18:36:12Z</updated-at>
+            <client-number>0002</client-number>
+          </account>
+        </accounts>
+      </business-unit>
+      <business-unit>
+        <company>OogaInc</company>
+        <created-at type="datetime">2008-08-27T16:21:33Z</created-at>
+        <department>Engineering</department>
+        <id type="integer">2</id>
+        <client-number>000101</client-number>
+        <updated-at type="datetime">2008-08-27T16:21:33Z</updated-at>
+        <accounts type="array">
+          <account>
+            <account-number>101</account-number>
+            <created-at type="datetime">2008-08-27T16:21:33Z</created-at>
+            <id type="integer">2</id>
+            <client-id type="integer">2</client-id>
+            <updated-at type="datetime">2008-08-27T16:21:33Z</updated-at>
+            <client-number>000101</client-number>
+          </account>
+        </accounts>
+      </business-unit>
+      <business-unit>
+        <company>OogaInc</company>
+        <created-at type="datetime">2008-08-27T16:21:34Z</created-at>
+        <department></department>
+        <id type="integer">3</id>
+        <client-number>0001000</client-number>
+        <updated-at type="datetime">2008-08-27T16:21:34Z</updated-at>
+        <accounts type="array">
+          <account>
+            <account-number>31974</account-number>
+            <created-at type="datetime">2008-08-27T16:21:34Z</created-at>
+            <id type="integer">3</id>
+            <client-id type="integer">3</client-id>
+            <updated-at type="datetime">2008-08-27T16:21:34Z</updated-at>
+            <client-number>0001000</client-number>
+          </account>
+        </accounts>
+      </business-unit>
+      <business-unit>
+        <company>OogaInc</company>
+        <created-at type="datetime">2008-08-27T16:21:34Z</created-at>
+        <department></department>
+        <id type="integer">4</id>
+        <client-number>0001001</client-number>
+        <updated-at type="datetime">2008-08-27T16:21:34Z</updated-at>
+        <accounts type="array">
+          <account>
+            <account-number>656064</account-number>
+            <created-at type="datetime">2008-08-27T16:21:34Z</created-at>
+            <id type="integer">4</id>
+            <client-id type="integer">4</client-id>
+            <updated-at type="datetime">2008-08-27T16:21:34Z</updated-at>
+            <client-number>0001001</client-number>
+          </account>
+        </accounts>
+      </business-unit>
+      <business-unit>
+        <company>OogaInc</company>
+        <created-at type="datetime">2008-08-27T16:21:34Z</created-at>
+        <department></department>
+        <id type="integer">5</id>
+        <client-number>0001002</client-number>
+        <updated-at type="datetime">2008-08-27T16:21:34Z</updated-at>
+        <accounts type="array">
+          <account>
+            <account-number>619842</account-number>
+            <created-at type="datetime">2008-08-27T16:21:34Z</created-at>
+            <id type="integer">5</id>
+            <client-id type="integer">5</client-id>
+            <updated-at type="datetime">2008-08-27T16:21:34Z</updated-at>
+            <client-number>0001002</client-number>
+          </account>
+        </accounts>
+      </business-unit>
+      <business-unit>
+        <company>OogaInc</company>
+        <created-at type="datetime">2008-08-27T16:21:34Z</created-at>
+        <department></department>
+        <id type="integer">6</id>
+        <client-number>0001003</client-number>
+        <updated-at type="datetime">2008-08-27T16:21:34Z</updated-at>
+        <accounts type="array">
+          <account>
+            <account-number>694370</account-number>
+            <created-at type="datetime">2008-08-27T16:21:34Z</created-at>
+            <id type="integer">6</id>
+            <client-id type="integer">6</client-id>
+            <updated-at type="datetime">2008-08-27T16:21:34Z</updated-at>
+            <client-number>0001003</client-number>
+          </account>
+        </accounts>
+      </business-unit>
+      <business-unit>
+        <company>OogaInc</company>
+        <created-at type="datetime">2008-08-27T16:21:34Z</created-at>
+        <department></department>
+        <id type="integer">7</id>
+        <client-number>0001004</client-number>
+        <updated-at type="datetime">2008-08-27T16:21:34Z</updated-at>
+        <accounts type="array">
+          <account>
+            <account-number>29284</account-number>
+            <created-at type="datetime">2008-08-27T16:21:34Z</created-at>
+            <id type="integer">7</id>
+            <client-id type="integer">7</client-id>
+            <updated-at type="datetime">2008-08-27T16:21:34Z</updated-at>
+            <client-number>0001004</client-number>
+          </account>
+        </accounts>
+      </business-unit>
+      <business-unit>
+        <company>OogaInc</company>
+        <created-at type="datetime">2008-08-27T16:21:34Z</created-at>
+        <department></department>
+        <id type="integer">8</id>
+        <client-number>0001005</client-number>
+        <updated-at type="datetime">2008-08-27T16:21:34Z</updated-at>
+        <accounts type="array">
+          <account>
+            <account-number>21285</account-number>
+            <created-at type="datetime">2008-08-27T16:21:34Z</created-at>
+            <id type="integer">8</id>
+            <client-id type="integer">8</client-id>
+            <updated-at type="datetime">2008-08-27T16:21:34Z</updated-at>
+            <client-number>0001005</client-number>
+          </account>
+        </accounts>
+      </business-unit>
+      <business-unit>
+        <company>OogaInc</company>
+        <created-at type="datetime">2008-08-27T16:21:34Z</created-at>
+        <department></department>
+        <id type="integer">9</id>
+        <client-number>0001006</client-number>
+        <updated-at type="datetime">2008-08-27T16:21:34Z</updated-at>
+        <accounts type="array">
+          <account>
+            <account-number>638772</account-number>
+            <created-at type="datetime">2008-08-27T16:21:34Z</created-at>
+            <id type="integer">9</id>
+            <client-id type="integer">9</client-id>
+            <updated-at type="datetime">2008-08-27T16:21:34Z</updated-at>
+            <client-number>0001006</client-number>
+          </account>
+        </accounts>
+      </business-unit>
+    </business-units>
+    EOXML
+  end
+end
