@@ -23,3 +23,4 @@ require "#{WREST_ROOT}/wrest/http/put"
 require "#{WREST_ROOT}/wrest/http/post"
 require "#{WREST_ROOT}/wrest/http/delete"
 require "#{WREST_ROOT}/wrest/http/options"
+require "#{WREST_ROOT}/wrest/http/session"
